Add cross-platform synthesis; expand scope to macOS/Linux/Windows
Synthesizes the four platform research docs into a master mapping table,
the seven structural design tensions, and the consolidated native-access
strategy. Updates CLAUDE.md to reflect the multi-platform scope, the
revised JDK 25 baseline (FFM), and links to all research docs.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01Aj24g7CSGELM1psBzggSnE