@@ -4,6 +4,92 @@ Project knowledge base for AI agents working on this repo. Keep this current.
 
 ## What this is
 
+A clean, immutable-first Java library for **creating and managing OS-level
+background services / daemons** — a single uniform API across **macOS, Linux, and
+Windows**. No UI — API only.
+
+> **Scope grew.** It started as a macOS-only launchd wrapper (hence the repo name)
+> and is now a **universal, cross-platform** service manager. The launchd model
+> remains the conceptual baseline the other platforms are mapped onto. The name is
+> historical; the goal is platform-agnostic.
+
+Per platform, the library:
+
+- **macOS** — writes `.plist` files (file I/O); drives `launchctl` (subprocess).
+- **Linux/systemd** — writes `.service`/`.timer` INI units (file I/O); drives `systemctl`.
+- **Linux/non-systemd** — (later) generates init scripts; drives `rc-service`/`sv`/`service`.
+- **Windows** — SCM via `advapi32` (Java FFM) and/or `sc.exe`; Task Scheduler via
+  `schtasks`/PowerShell; **needs a service-host shim to run arbitrary commands as a
+  service** (see the big quirk below).
+- Native OS libraries are reached via **Java FFM** (no shipped compiled binaries) where
+  it pays off (Windows SCM); everything else is subprocess. **All** native access sits
+  behind stubbable interfaces so the library unit-tests off-platform.
+
+**Status:** _Research complete (step 1). Design phase (step 2) — not started._
+The single-platform API sketch near the bottom predates the cross-platform expansion
+and is **superseded** as the public design; it survives only as the macOS-backend shape.
+No implementation code has been written yet. Do not start implementing until the
+cross-platform API is designed and approved.
+
+## Project plan (owner's 5 steps)
+
+1. ✅ **Research all platforms & document quirks** — done. See `docs/research/`.
+2. ⏳ **Design an overarching API** that works across all platforms — next.
+3. ⬜ Design clean interop with each platform's native facilities.
+4. ⬜ Implement per-platform modules one at a time (macOS → systemd → Windows → OpenRC).
+5. ⬜ Assemble the unified library behind one facade.
+
+## Research docs (step 1 output — read these first)
+
+- `docs/research/cross-platform-synthesis.md` — **start here**: master mapping table,
+  the structural tensions (T1–T7), native-access strategy, and the open decisions for step 2.
+- `docs/research/windows-services.md` — SCM + Task Scheduler; the service-protocol quirk.
+- `docs/research/linux-systemd.md` — units, timers, enable-vs-start, lingering.
+- `docs/research/linux-other-init.md` — OpenRC/SysV/runit/BusyBox; distro landscape; detection.
+- `docs/research/java-ffm-native-access.md` — FFM maturity, Java baseline, FFM-vs-subprocess.
+
+## Headline cross-platform findings (the things that shape the API)
+
+- **"Run any command" is not universal.** macOS/Linux run any binary as a daemon;
+  a **Windows service binary must speak the SCM control protocol** — a plain
+  `java -jar app.jar` as a service fails (error 1053). Options: bundle WinSW (a compiled
+  exe — conflicts with "no binaries"), a **pure-Java service host using FFM upcalls**
+  (preserves "no binaries", needs JDK 22+), or route such jobs to Task Scheduler. **This is
+  the pivotal design decision (tension T1).**
+- **One launchd = several subsystems elsewhere.** Windows splits into Services +
+  Task Scheduler; systemd splits a scheduled job into a `.timer` + `.service`. A single
+  `Job` must be **routed to a backend by its shape**.
+- **`enable` (boot persistence) ≠ `start` (run now)** on systemd; launchd conflates them.
+- **Capabilities differ** (per-user agents, calendar scheduling, conditional keep-alive,
+  structured status). Plan: expose a `Capabilities` query + **fail fast** on unsupported
+  features rather than silently degrading.
+- **Config format is per-platform** (plist XML / systemd INI / Windows registry+XML /
+  shell scripts) → a **per-backend renderer**, not one shared codec.
+- **Linux ≠ systemd everywhere.** ~90% of VMs are systemd, but **Alpine/OpenRC and
+  init-less containers** are where servers often run. Detect the init at runtime; treat
+  Linux as a pluggable backend (systemd v1, OpenRC next).
+
+## Revised key decisions (supersede earlier single-platform notes)
+
+- **Java baseline → JDK 25 LTS** (was 17). Rationale: **FFM is final in JDK 22** (JEP 454),
+  preview in 21; JDK 25 is the first LTS with FFM final. Required for the Windows SCM/FFM
+  path and the pure-Java service host. Subprocess-only fallback builds for 17/21 are
+  possible but give a weaker Windows story. (Consuming apps must pass
+  `--enable-native-access` under JEP 472 integrity-by-default.)
+- **Native access: hybrid** — subprocess for macOS (`launchctl`), systemd (`systemctl`),
+  non-systemd Linux, and Windows Task Scheduler; **FFM (`advapi32`) for Windows services**.
+- **`dd-plist`** stays the macOS plist codec; systemd/script/task formats need no such dep.
+
+---
+
+## (Historical) original single-platform design
+
+Everything below is the original macOS-only sketch. Kept for the macOS-backend details
+(file locations, launchctl subcommands, dd-plist). **Superseded as the public API** by the
+forthcoming cross-platform design (step 2).
+
+## What this was (macOS-only)
+
 A small, clean Java library for **creating and managing launchd entries on macOS**.
 No UI — API only. The library:
 
@@ -11,10 +97,6 @@ No UI — API only. The library:
 - Resolves the correct on-disk location using launchd best practices (see below).
 - Invokes the `launchctl` binary as a subprocess for load/unload/start/stop/status.
 - Serializes/deserializes the Apple property-list format with a dedicated plist library.
-
-**Status:** _Design phase._ The API sketch below is a proposal pending owner approval.
-No implementation code has been written yet. Do not start implementing until the
-sketch is approved.
 
 ## Repo facts
 
